# repocat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dev/docs/: architecture.md  implementation-plan.md  repocat-implementation-specification.md
src/repocat/: __init__.py  __main__.py  cli.py  diagnostics.py  models.py  paths.py  reading.py  rendering.py  selection.py  traversal.py
tests/: conftest.py  test_cli.py  test_diagnostics.py  test_rendering.py  test_selection.py  test_traversal_io.py
