[project]
name = "repocat"
version = "0.3.0"
description = "Deterministic repository capture for prompt-friendly output"
readme = "README.md"
authors = [
    { name = "omasoud", email = "osama.masoud@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pathspec>=1.1.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
repocat = "repocat:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "2 days" # Exclude packages released in the last 2 days as a protection against undiscovered supply chain vulnerabilities.

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
