[project]
name = "repocat"
version = "0.3.0"
description = "Deterministic repository capture for prompt-friendly output"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "omasoud", email = "osama.masoud@gmail.com" }
]
keywords = ["llm", "prompt", "context", "repository", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.14"
dependencies = [
    "pathspec>=1.1.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/omasoud/repocat"
Source = "https://github.com/omasoud/repocat"
"Bug Tracker" = "https://github.com/omasoud/repocat/issues"

[project.scripts]
repocat = "repocat:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "2 days" # Exclude packages released in the last 2 days as a protection against undiscovered supply chain vulnerabilities.

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
